Multiple compilation attempts break LogCompilation, lead to confusing PrintInlining output

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b17

      The C2 compilation can fail after the PrintInlining output is printed so multiple attempt to compile the method will result in a duplicated PrintInlining output.
      Events for each attempts are logged and confuse LogCompilation

            Assignee:
            Roland Westrelin
            Reporter:
            Roland Westrelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: