8043638: Multiple compilation attempts break LogCompulation, lead to confusing PrintInlining output

Dumps inlining only for last compilation attempt. Fix LogCompilation tool so it handles multiple compilation attempts.

Reviewed-by: vlivanov, kvn